cart button alignment corrected

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ disable-links {
 	width:60px;
 	height:60px;
 	bottom:40px;
-	right:40px;
+	right:90px;
 	background-color:#ffbe33;
 	color:#FFF;
 	border-radius:50px;
